# 4DTracking

./: Branches.txt  PU density 2d.ipynb  Selected events - PU study.txt  event0.txt  n_hits.ipynb  ntuple_acts_reader_check.ipynb  ntuple_lib.py  pT_distribution.ipynb  pileup.ipynb  pileup_t.ipynb  pileup_z.ipynb  reco_cutoff_checks.ipynb  t_clustering_test.ipynb  timing.ipynb  track_prob.ipynb  vertex_t0.ipynb  vtx_resolution_track_weights.ipynb  vtx_time_info  vtx_z_info  z_resolution.ipynb
ACTS testing/: AMVF_example.bash  AMVF_tutorial.bash  AMVF_vs_Iterative.bash  Iterative_example.bash  Kalman_test.bash  amvf_vs_iterative_output.txt  example_output.txt  iterative_output.txt  python_bind_test.py  timing.tsv  tutorial_output.txt  vertexing_visualizer.ipynb
ACTS testing/.devcontainer/: devcontainer.json
ACTS testing/output/: event0_AMVF.txt  event0_iterative.txt  event10_AMVF.txt  event10_iterative.txt  event11_AMVF.txt  event11_iterative.txt  event12_AMVF.txt  event12_iterative.txt  event13_AMVF.txt  event13_iterative.txt  event14_AMVF.txt  event14_iterative.txt  event15_AMVF.txt  event15_iterative.txt  event16_AMVF.txt  event16_iterative.txt  event17_AMVF.txt  event17_iterative.txt  event18_AMVF.txt  event18_iterative.txt  event19_AMVF.txt  event19_iterative.txt  event1_AMVF.txt  event1_iterative.txt  event20_iterative.txt  event21_AMVF.txt  event22_AMVF.txt  (+160 more)
ACTS testing/test_project/: CMakeLists.txt
ACTS testing/test_project/src/: main.cpp
ntuples_condor/: Branches.txt  TODO  hadd.py  min_vtx_distance.ipynb  pT_distribution.ipynb  test.ipynb  time.ipynb
(+11 files in other folders)
